@@ -2,6 +2,15 @@
 
 	* pycvsanaly2/DBContentHandler.py:
 
+	Paths in different branches are now considered as different
+	files. That was obvious with SVN because branches are directories,
+	but in CVS and Git exactly the same path can be in different
+	branches.
+	
+2009-04-29  Carlos Garcia Campos  <carlosgc@gsyc.es>
+
+	* pycvsanaly2/DBContentHandler.py:
+
 	Do not save caches to disk on every database commit since it's a
 	very heavy operation, do it only once at the end of the parsing
 	process.
